fix backend URL

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-VITE_API_URL=https://railway.com/project/3584b081-74f1-4ae8-99d7-b93927e37bbe/service/c5995f38-30cb-4e74-a598-96785279b584?environmentId=c61c9f90-0dee-4674-b4ff-4b4d8aa5d9ab
+VITE_API_URL=https://logistics-app-production.up.railway.app/
